syntax = "proto3";

package loggrebutterfly;

service Master {
  rpc Routes(RoutesInfo) returns (RoutesResponse) {}
}

message RoutesInfo {
}

message RoutesResponse {
  repeated RouteInfo routes = 1;
}

message RouteInfo {
  string name = 1;
  string leader = 2;
}
